--- a/package.json
+++ b/package.json
@@ -8,8 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/node": "^14.14.25",
+    "@types/react": "^17.0.1",
+    "@types/tinycolor2": "^1.4.2",
+    "autoprefixer": "^10.2.4",
     "next": "10.0.6",
+    "postcss": "^8.2.5",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "tailwindcss": "^2.0.2",
+    "tinycolor2": "^1.4.2",
+    "typescript": "^4.1.3"
+  },
+  "devDependencies": {
+    "prettier": "^2.2.1"
   }
 }
